Issue #7 Enhance starting of containers